--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,11 +1,11 @@
 name: A workflow for my Hello World file
-on: push
+on: push # Run on every push to the repo
 jobs:
-  build:
-    name: Hello world action
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v1
-      - uses: ./action-a
-        with:
+  build: # Id of the job
+    name: Hello world action # Used for display
+    runs-on: ubuntu-latest # define the machine that runs the job
+    steps: # linear sequence of opperation
+      - uses: actions/checkout@v1 # allow the access of repository actions (build in)
+      - uses: ./action-a # path to my custom action directory
+        with: # Define variable used in the runtime env (action's inputs)
           MY_NAME: "Alexis"
